@@ -3,6 +3,9 @@
 pipeline{
 
     agent any
+    environment {
+        MAVEN_OPTS = '--add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED'
+    }
 
     parameters{
 
